examples/test/testpolicy2982.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2982
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key33: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value24
      podSelector:
        matchLabels:
          key18: value26
          key9: value21
          key30: value12
